# ChangeLog for dev-python/blessings
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*blessings-1.5 (31 Jul 2012)

  31 Jul 2012; James Rowe <jnrowe@gmail.com> +blessings-1.5.ebuild:
  Version bump [625].

  16 Jul 2012; James Rowe <jnrowe@gmail.com> -blessings-1.3.ebuild,
  blessings-1.4.ebuild:
  Keyworded x86.

  16 Jul 2012; James Rowe <jnrowe@gmail.com> blessings-1.4.ebuild:
  Keyworded amd64.

*blessings-1.4 (15 Jun 2012)

  15 Jun 2012; James Rowe <jnrowe@gmail.com> +blessings-1.4.ebuild:
  Version bump [616].

  08 Apr 2012; James Rowe <jnrowe@gmail.com> blessings-1.3.ebuild:
  Use distutils.eclass via jnrowe-pypi.

  19 Mar 2012; James Rowe <jnrowe@gmail.com> blessings-1.3.ebuild:
  Switched to EAPI4.

  03 Mar 2012; James Rowe <jnrowe@gmail.com> blessings-1.3.ebuild:
  Removed Python 2.4 support.

  02 Mar 2012; James Rowe <jnrowe@gmail.com> blessings-1.3.ebuild:
  Keyworded amd64.

  02 Mar 2012; James Rowe <jnrowe@gmail.com> blessings-1.3.ebuild:
  Keyworded x86.

  01 Feb 2012; James Rowe <jnrowe@gmail.com> blessings-1.3.ebuild:
  Keyworded ~x86.

*blessings-1.3 (01 Feb 2012)

  01 Feb 2012; James Rowe <jnrowe@gmail.com> +blessings-1.3.ebuild,
  +metadata.xml, +watch:
  Initial ebuild, by me [539].
