@@ -1,12 +1,11 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
-DIST blessings-1.4.tar.gz 19416 RMD160 01fca4f5dc246343b8c088ad2a598d2cfaebfa9e SHA1 396a6b121224e2f7b10694fe65934264411b7b0b SHA256 a9eaaa1b4e8d3269233f415e49a304b506e19441599e17c1aee269f7486162b6
-DIST blessings-1.5.tar.gz 20263 RMD160 0f4ec8ff55914d3266daa651a5c9ce84119ffa11 SHA1 ddf8fd071157c96d315cca615762caa8f835372f SHA256 3aa414066c285646622384b563ec4b93c7e50099bd65a397b8db6b6e9a90b657
+DIST blessings-1.5.tar.gz 20263 SHA256 3aa414066c285646622384b563ec4b93c7e50099bd65a397b8db6b6e9a90b657 WHIRLPOOL 566c9dc7944f4d71013ab3d4a10f13b139bbdb9d6960aa41e3b42d602c04be5db4a3e09bb95737b1cb7c67462e00538ce4c4c3e9517dbd2d0100bb641924e484
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREKAAYFAlAik5cACgkQzJrj3cAXR0kmuwCguUaxqMPP/JDmCBqWbDFkbaKQ
-tioAoJq8B31wETk8d9dlmLk1aX+Y7gyG
-=cJEj
+iEYEAREIAAYFAlA+vKEACgkQzJrj3cAXR0l6vQCfUoGlMMXJuB64AdeQTuAGUTRw
+QC0AnjZ4IcInsgA7m9peHz1jCqkeoBIx
+=BnRx
 -----END PGP SIGNATURE-----
