@@ -13,7 +13,7 @@ DESCRIPTION="Thin and practical terminal formatting, positioning, and more"
 
 LICENSE="MIT"
 SLOT="0"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="~amd64 x86"
 IUSE="test"
 
 DEPEND="test? ( dev-python/nose )"
