@@ -1,14 +1,0 @@
-DEFINED_PHASES=compile configure install prepare test unpack
-DEPEND=test? ( dev-python/nose ) !<sys-apps/portage-2.1.10.58 python_targets_python2_5? ( dev-lang/python:2.5 ) python_targets_python2_6? ( dev-lang/python:2.6 ) python_targets_python2_7? ( dev-lang/python:2.7 )
-DESCRIPTION=Thin and practical terminal formatting, positioning, and more
-EAPI=4
-HOMEPAGE=http://pypi.python.org/pypi/blessings/
-IUSE=test python_targets_python2_5 python_targets_python2_6 python_targets_python2_7
-KEYWORDS=amd64 x86
-LICENSE=MIT
-RDEPEND=python_targets_python2_5? ( dev-lang/python:2.5 ) python_targets_python2_6? ( dev-lang/python:2.6 ) python_targets_python2_7? ( dev-lang/python:2.7 )
-REQUIRED_USE=|| ( python_targets_python2_5 python_targets_python2_6 python_targets_python2_7 )
-SLOT=0
-SRC_URI=mirror://pypi/b/blessings/blessings-1.4.tar.gz
-_eclasses_=base	d40e074a6349af3ea5e937210630bdc1	eutils	327b713e2d6949c42cd96bc4898fd280	jnrowe-pypi	686cf6e0feaf26499041ad17392c3774	multilib	5782800349f728f725f9378105c6a2ab	python-distutils-ng	6786a3ab681bb2f21310183278f72e33	toolchain-funcs	d3b5812eeab360bc41aa48b6cdbbc142	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=0a3521d60c3509aa18520799c6228ceb
