@@ -1,6 +1,5 @@
 REM 2012-08-29 *1 MSG %"Stabilise amd64 media-gfx/blockdiag-1.1.6%" %a
 REM 2012-08-30 *1 MSG %"Stabilise amd64 dev-python/blessings-1.5%" %a
-REM 2012-08-30 *1 MSG %"Stabilise x86 dev-python/blessings-1.5%" %a
 REM 2012-08-30 *1 MSG %"Stabilise amd64 dev-python/flake8-1.4%" %a
 REM 2012-08-30 *1 MSG %"Stabilise x86 dev-python/flake8-1.4%" %a
 REM 2012-08-30 *1 MSG %"Stabilise amd64 games-puzzle/gbrainy-2.1.4%" %a
