@@ -2,6 +2,10 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  30 Aug 2012; James Rowe <jnrowe@gmail.com> -blessings-1.4.ebuild,
+  blessings-1.5.ebuild:
+  Keyworded x86.
+
 *blessings-1.5 (31 Jul 2012)
 
   31 Jul 2012; James Rowe <jnrowe@gmail.com> +blessings-1.5.ebuild:
